data/tests/typer_error/poly_checking/valid/test6.spl
fun(a, b, c, d) :: a a Int a -> Bool {
    return a == c && b == d;
}