data/tests/typer_error/poly_checking/invalid/test6.spl
fun(a, b, c, d) :: a Bool Int a -> Bool {
    return a == c && b == d;
}